2012-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Init auto var ‘workptr’.

	Omission from 2011-10-13, "Remove
	‘workptr’ from global state of rcsclean(1)".

	* rcsclean.c (rcsclean_main): Init ‘workptr’.

2012-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Init auto var ‘neworkptr’.

	Omission from 2011-10-14, "Remove
	‘neworkptr’ from global state of co(1)".

	* co.c (co_main): Init ‘neworkptr’.

2012-04-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Fix bug: Avoid ‘bool’ for temporary ‘int’ values.

	Regression introduced 2010-03-16, "Use `bool' (and `true'
	and `false') more".  When assigning to a bool from an int,
	if the int is negative, the bool will be true, losing
	information when that value is later compared against zero.
	Reported by Paul Ackersviller.

	* ci.c (addbranch): Change type of ‘removedlock’ back to ‘int’.

2012-01-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add configure option ‘--enable-coverage’.

	* rcsutil.c [USE_NORMAL_EXIT] (_Exit): New #define.

2012-01-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Remove configure option ‘--disable-standalone-compat’.

	* Makefile.am (bin_SCRIPTS): Move outside ‘if BINBLOAT’.
	[!BINBLOAT] (noinst_DATA): Delete var.
	(CLEANFILES): Remove sub.sh.
	(sub.sh): Delete target.

2012-01-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	ci: Fix bug: Don't discard working file mtime with ‘-T’.

	Regression introduced 2010-03-13, "Topo-sort top-level;
	eliminate redundant forward func decls".

	* ci.c (ci_main): Move incorrectly-placed parens in
	sub-conditional-expression from "partial condition" to
	condition; add additional pair of parens around sub-cond-expr.

2012-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Invoke diff(1) with ‘--label’ instead of ‘-L’.

	* rcsdiff.c (setup_label): Use "--label", not "-L".

2011-12-26  Oliver Billmann  <gnubug@billmann-edv.net>  (tiny change)

	Fix bug: Fully init ‘struct tm t’ used for ‘-zLT’ handling.
